--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "daisyui": "^4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
