--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "5.11.0",
+    "bcrypt": "^5.1.1",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sweetalert2": "^11.10.8"
   },
   "devDependencies": {
     "daisyui": "^4.10.2",
@@ -21,6 +24,7 @@
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
     "prisma": "5.11.0",
+    "react-icons": "^5.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
